// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeGrid /> Should render all in 2 columns 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          style="display: flex; align-items: center;"
        >
          <svg
            class="bookmark-icon-bookmarked"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="margin: 0px 5px;"
          >
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone3"
        >
          <ul
            class="striped-list-items"
            role="listbox"
          >
            <li
              class="tree-item"
              role="option"
            >
              <button
                class="guided-answer__tree guided-answer__bookmark"
                id="goto-bookmark-button"
                tabindex="0"
              >
                <div
                  class="guided-answer__tree__ul"
                >
                  <h3
                    class="guided-answer__tree__title"
                  >
                    <span>
                      Bookmark 1 Title
                    </span>
                    <button
                      class="guided-answer__bookmark__button"
                      id="bookmark-button"
                      tabindex="-1"
                    >
                      <svg
                        class="bookmark-icon-bookmarked"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    class="bottom-section"
                    id="bottom-section"
                  >
                    <span
                      class="guided-answer__tree__desc"
                    >
                      Bookmark 1 Description
                    </span>
                    <div
                      class="component-and-product-container"
                      style="margin-top: 10px;"
                    >
                      <div
                        class="guided-answer__tree__product"
                        id="product-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Product: 
                        </span>
                        Product 1
                      </div>
                      <div
                        class="guided-answer__tree__component"
                        id="component-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Component: 
                        </span>
                        Component 1
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          style="display: flex; align-items: center;"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.507 12.324a7 7 0 0 0 .065-8.56A7 7 0 0 0 2 4.393V2H1v3.5l.5.5H5V5H2.811a6.008 6.008 0 1 1-.135 5.77l-.887.462a7 7 0 0 0 11.718 1.092zm-3.361-.97l.708-.707L8 7.792V4H7v4l.146.354 3 3z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="margin: 0px 5px;"
          >
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone4"
        >
          <ul
            class="striped-list-items"
            role="listbox"
          >
            <li
              class="tree-item"
              role="option"
            >
              <button
                class="guided-answer__tree"
                id="last-visited-button"
                tabindex="0"
              >
                <div
                  class="guided-answer__tree__ul"
                >
                  <h3
                    class="guided-answer__tree__title"
                  >
                    Bookmark 1 Title
                  </h3>
                  <div
                    class="bottom-section"
                    id="bottom-section"
                  >
                    <span
                      class="guided-answer__tree__desc"
                    >
                      Bookmark 1 Description
                    </span>
                    <div
                      class="component-and-product-container"
                      style="margin-top: 10px;"
                    >
                      <div
                        class="guided-answer__tree__product"
                        id="product-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Product: 
                        </span>
                        Product 1
                      </div>
                      <div
                        class="guided-answer__tree__component"
                        id="component-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Component: 
                        </span>
                        Component 1
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
      <div>
        <h3
          style="display: flex; align-items: center;"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M15 2v1.67l-5 4.759V14H6V8.429l-5-4.76V2h14zM7 8v5h2V8l5-4.76V3H2v.24L7 8z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="margin: 0px 5px;"
          >
            Quick Filters
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone5"
        >
          <ul
            class="striped-list-items"
            role="listbox"
          >
            <li
              class="tree-item"
              role="option"
            >
              <button
                class="guided-answer__quick-filter"
                tabindex="0"
              >
                <div>
                  Product: 
                  <strong>
                    product 1
                  </strong>
                </div>
                <div>
                  Component: 
                  <strong>
                    component 1
                  </strong>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only Bookmarks 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          style="display: flex; align-items: center;"
        >
          <svg
            class="bookmark-icon-bookmarked"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="margin: 0px 5px;"
          >
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone0"
        >
          <ul
            class="striped-list-items"
            role="listbox"
          >
            <li
              class="tree-item"
              role="option"
            >
              <button
                class="guided-answer__tree guided-answer__bookmark"
                id="goto-bookmark-button"
                tabindex="0"
              >
                <div
                  class="guided-answer__tree__ul"
                >
                  <h3
                    class="guided-answer__tree__title"
                  >
                    <span>
                      Bookmark 1 Title
                    </span>
                    <button
                      class="guided-answer__bookmark__button"
                      id="bookmark-button"
                      tabindex="-1"
                    >
                      <svg
                        class="bookmark-icon-bookmarked"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </h3>
                  <div
                    class="bottom-section"
                    id="bottom-section"
                  >
                    <span
                      class="guided-answer__tree__desc"
                    >
                      Bookmark 1 Description
                    </span>
                    <div
                      class="component-and-product-container"
                      style="margin-top: 10px;"
                    >
                      <div
                        class="guided-answer__tree__product"
                        id="product-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Product: 
                        </span>
                        Product 1
                      </div>
                      <div
                        class="guided-answer__tree__component"
                        id="component-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Component: 
                        </span>
                        Component 1
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only LastVisited 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          style="display: flex; align-items: center;"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.507 12.324a7 7 0 0 0 .065-8.56A7 7 0 0 0 2 4.393V2H1v3.5l.5.5H5V5H2.811a6.008 6.008 0 1 1-.135 5.77l-.887.462a7 7 0 0 0 11.718 1.092zm-3.361-.97l.708-.707L8 7.792V4H7v4l.146.354 3 3z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="margin: 0px 5px;"
          >
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone1"
        >
          <ul
            class="striped-list-items"
            role="listbox"
          >
            <li
              class="tree-item"
              role="option"
            >
              <button
                class="guided-answer__tree"
                id="last-visited-button"
                tabindex="0"
              >
                <div
                  class="guided-answer__tree__ul"
                >
                  <h3
                    class="guided-answer__tree__title"
                  >
                    Bookmark 1 Title
                  </h3>
                  <div
                    class="bottom-section"
                    id="bottom-section"
                  >
                    <span
                      class="guided-answer__tree__desc"
                    >
                      Bookmark 1 Description
                    </span>
                    <div
                      class="component-and-product-container"
                      style="margin-top: 10px;"
                    >
                      <div
                        class="guided-answer__tree__product"
                        id="product-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Product: 
                        </span>
                        Product 1
                      </div>
                      <div
                        class="guided-answer__tree__component"
                        id="component-container"
                      >
                        <span
                          class="bottom-title"
                        >
                          Component: 
                        </span>
                        Component 1
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only QuickFilters 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          style="display: flex; align-items: center;"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M15 2v1.67l-5 4.759V14H6V8.429l-5-4.76V2h14zM7 8v5h2V8l5-4.76V3H2v.24L7 8z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="margin: 0px 5px;"
          >
            Quick Filters
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone2"
        >
          <ul
            class="striped-list-items"
            role="listbox"
          >
            <li
              class="tree-item"
              role="option"
            >
              <button
                class="guided-answer__quick-filter"
                tabindex="0"
              >
                <div>
                  Product: 
                  <strong>
                    product 1
                  </strong>
                </div>
                <div>
                  Component: 
                  <strong>
                    component 1
                  </strong>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
